--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="nav-background">
         <a href="index.html">
-          <img src="assets/IMG/logo.png" alt="Logo da Projeto GCP" class="logo"
+          <img src="" alt="Logo da Projeto GCP" class="logo"
         /></a>
         <nav>
           <ul class="links">
