--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="nav-background">
         <a href="index.html">
-          <img src="https://github.com/LeticiaKobus/project/blob/main/assets/IMG/Logo.png" alt="Logo da Projeto GCP" class="logo"
+          <img src="https://github.com/LeticiaKobus/project/blob/main/assets/IMG/Logo.png" alt="Logo do Projeto GCP" class="logo"
         /></a>
         <nav>
           <ul class="links">
