--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PROJETO GCP - On-Premise</title>
     <link rel="stylesheet" href="assets/CSS/globals.css" />
-    <link rel="stylesheet" href="assets/CSS/header.css" />
+    <link rel="stylesheet" href="assets\CSS\header.css" />
     <link rel="stylesheet" href="assets/CSS/main.css" />
     <link rel="stylesheet" href="assets/CSS/footer.css" />
     <link
@@ -18,9 +18,13 @@
     <header>
       <div class="nav-background">
         <a href="index.html">
-          <img src="https://github.com/LeticiaKobus/project/blob/main/assets/IMG/Logo.png" alt="Logo do Projeto GCP" class="logo"
+          <img src="assets/IMG/logo.png" alt="Logo da Projeto GCP" class="logo"
         /></a>
-        <nav>
+        <nav class="nav">
+          <input type="checkbox" id="checkbox" class="checkbox" />
+          <label for="checkbox" class="label-links"
+            ><span class="hamburguer"></span
+          ></label>
           <ul class="links">
             <li class="link active"><a href="index.html">HOME</a></li>
             <li class="link"><a href="#sobre">SOBRE NÓS</a></li>
