--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="nav-background">
         <a href="index.html">
-          <img src="assets/IMG/logo.png" alt="Logo da Projeto GCP" class="logo"
+          <img src="assets/IMG/Logo.png" alt="Logo da Projeto GCP" class="logo"
         /></a>
         <nav class="nav">
           <input type="checkbox" id="checkbox" class="checkbox" />
