--- a/ingles.html
+++ b/ingles.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PROJETO GCP - On-Premise</title>
+    <title>GCP PROJECT - On-Premise</title>
     <link rel="stylesheet" href="assets/CSS/globals.css" />
     <link rel="stylesheet" href="assets\CSS\header.css" />
     <link rel="stylesheet" href="assets/CSS/main.css" />
@@ -18,7 +18,7 @@
     <header>
       <div class="nav-background">
         <a href="index.html">
-          <img src="assets/IMG/Logo.png" alt="Logo do Projeto GCP" class="logo"
+          <img src="assets/IMG/Logo.png" alt="Logo da Projeto GCP" class="logo"
         /></a>
         <nav class="nav">
           <input type="checkbox" id="checkbox" class="checkbox" />
@@ -27,73 +27,76 @@
           ></label>
           <ul class="links">
             <li class="link active"><a href="index.html">HOME</a></li>
-            <li class="link"><a href="#sobre">SOBRE NÓS</a></li>
-            <li class="link"><a href="#equipe">EQUIPE</a></li>
-            <li class="link"><a href="#parceiros">PARCEIROS</a></li>
-            </li>
+            <li class="link"><a href="#sobre">ABOUT US</a></li>
+            <li class="link"><a href="#equipe">TEAM</a></li>
+            <li class="link"><a href="#parceiros">PARTNERS</a></li>
             <li class="link">
-              <a href="mailto:administrador@cybernubes.com.br" target="_blank"
-                >CONTATO</a
+              <a href="mailto:administrador@cybernubes.com.br" target="_blank">
+                CONTACT</a
               >
             </li>
             <li class="link">
-              <a href="ingles.html"
-                ><img src="assets\IMG\icons\tradutor.png" alt="tradução" class="tradutor"
+              <a href="index.html"
+                ><img
+                  src="assets\IMG\icons\tradutor.png"
+                  alt="tradução"
+                  class="tradutor"
               /></a>
+            </li>
           </ul>
         </nav>
       </div>
       <div class="title-background">
         <h1 class="title">
-          Simulação Detalhada de Migração de Serviço On-Premises para Nuvem
-          Pública
+          Detailed Simulation of On-Premises Service Migration to the Cloud
+          Public
         </h1>
         <div>
-          <h2 class="subtitle">Projeto de Pesquisa</h2>
+          <h2 class="subtitle">Research project</h2>
           <a href="https://www.youtube.com/watch?v=zsk4JR1sA8A" target="_blank"
             ><img
               src="assets/IMG/icons/botao-play.png"
               alt="Assista ao Vídeo"
               class="icon-play"
-            /><span cass="assista">Assista</span></a
+            /><span cass="assista">Watch</span></a
           >
         </div>
       </div>
     </header>
     <main>
       <section id="sobre">
-        <h1 class="section-title">SOBRE NÓS</h1>
+        <h1 class="section-title">ABOUT US</h1>
         <h4 class="section-subtitle">
-          Simulação Detalhada de Migração de Serviço On-Premises para Nuvem
-          Pública
+          Detailed Simulation of On-Premises Service Migration to the Cloud
+          Public
         </h4>
         <div class="section-text">
           <p>
-            Este projeto de pesquisa propõe uma simulação abrangente e
-            meticulosa dessa transição, visando não apenas identificar seus
-            benefícios e desafios, mas também avaliar a eficácia das ferramentas
-            de segurança na proteção dos dados armazenados na nuvem pública.
+            This research project proposes a comprehensive and of this
+            transition, aiming not only to identify its benefits and challenges,
+            but also evaluate the effectiveness of the tools security in
+            protecting data stored in the public cloud.
           </p>
         </div>
         <div class="section-text">
           <p>
-            Pretende-se realizar uma análise detalhada dessa migração, com foco
-            na avaliação crítica dos aspectos positivos e negativos, bem como na
-            eficácia das ferramentas comumente utilizadas, visando a segurança e
-            proteção dos dados na nuvem pública, além da realização da análise
-            de métricas de segurança do armazenamento de dados na nuvem. Ao
-            finalizar esse estudo, espera-se fornecer não apenas uma
-            contribuição mais aprofundada, mas sim contribuir para o avanço do
-            conhecimento nesse campo crucial de análise de migrações, bem como
-            também oferecerá insights valiosos para empresas, profissionais e
-            alunos interessados em entender e implementar com eficácia a
-            migração para a nuvem pública, contribuindo assim para o avanço do
-            conhecimento nesse campo crucial computação em nuvem.
+            It is intended to carry out a detailed analysis of this migration,
+            focusing in the critical evaluation of positive and negative
+            aspects, as well as in the effectiveness of commonly used tools,
+            aiming at safety and data protection in the public cloud, in
+            addition to performing analysis of cloud data storage security
+            metrics. To the finalizing this study, we hope to provide not only a
+            more in-depth contribution, but rather contribute to the advancement
+            of knowledge in this crucial field of migration analysis, as well as
+            will also offer valuable insights for businesses, professionals and
+            students interested in understanding and effectively implementing
+            the migration to the public cloud, thus contributing to the
+            advancement of knowledge in this crucial field of cloud computing.
           </p>
         </div>
       </section>
       <section id="equipe">
-        <h1 class="section-title">EQUIPE</h1>
+        <h1 class="section-title">TEAM</h1>
         <div class="equipe-container">
           <div class="equipe-campo">
             <img
@@ -103,7 +106,7 @@
             />
             <div class="equipe-info">
               <h4 class="equipe-name">Beatriz Dalagnoli</h4>
-              <p class="equipe-role">Desenvolvedora</p>
+              <p class="equipe-role">Developer</p>
               <div class="equipe-social">
                 <a
                   href="https://www.cloudskillsboost.google/public_profiles/41ee2a6f-b3cc-4a66-a42b-313cd8f3e2b5"
@@ -138,7 +141,7 @@
             />
             <div class="equipe-info">
               <h4 class="equipe-name">Lucas Lima</h4>
-              <p class="equipe-role">Bolsista</p>
+              <p class="equipe-role">Scholarship</p>
               <div class="equipe-social">
                 <a
                   href="https://www.cloudskillsboost.google/public_profiles/472bec56-d52b-4178-8a6c-541c69e32679"
@@ -171,7 +174,7 @@
             />
             <div class="equipe-info">
               <h4 class="equipe-name">Jackson Mallmann</h4>
-              <p class="equipe-role">Professor</p>
+              <p class="equipe-role">Teacher</p>
               <div class="equipe-social">
                 <a
                   href="https://www.cloudskillsboost.google/public_profiles/343c45d8-837c-4843-9b06-ec4e552bd068"
@@ -204,7 +207,7 @@
             />
             <div class="equipe-info">
               <h4 class="equipe-name">Lohan Amâncio</h4>
-              <p class="equipe-role">Estudante</p>
+              <p class="equipe-role">Student</p>
               <div class="equipe-social">
                 <a
                   href="https://www.cloudskillsboost.google/public_profiles/c83cb1c0-20e7-43a2-b98d-e4fc0f528f28"
@@ -237,7 +240,7 @@
             />
             <div class="equipe-info">
               <h4 class="equipe-name">Abraão Teixeira</h4>
-              <p class="equipe-role">Estudante</p>
+              <p class="equipe-role">Student</p>
               <div class="equipe-social">
                 <a
                   href="https://www.cloudskillsboost.google/public_profiles/c83cb1c0-20e7-43a2-b98d-e4fc0f528f28"
@@ -270,7 +273,7 @@
             />
             <div class="equipe-info">
               <h4 class="equipe-name">Leticia Kobus</h4>
-              <p class="equipe-role">Bolsista</p>
+              <p class="equipe-role">Scholarship</p>
               <div class="equipe-social">
                 <a
                   href="https://www.cloudskillsboost.google/public_profiles/7d8f8a81-d1d6-43b7-a3aa-fc5ac33ff058"
@@ -298,7 +301,7 @@
         </div>
       </section>
       <section id="parceiros">
-        <h1 class="section-title">PARCEIROS</h1>
+        <h1 class="section-title">PARTNERS</h1>
         <div class="parceiros-container">
           <div class="parceiros-campo">
             <a href="https://cloud.google.com/?hl=pt-BR">
@@ -312,7 +315,7 @@
           </div>
         </div>
 
-        <h1 class="section-title">APOIADORES</h1>
+        <h1 class="section-title">SUPPORTERS</h1>
         <div class="parceiros-container">
           <div class="parceiros-campo">
             <a href="https://brusque.ifc.edu.br/">
@@ -327,17 +330,29 @@
       </section>
     </main>
     <footer>
-      <h5>“O conteúdo deste website, tais como texto, gráficos,
-        imagens e outros materiais contidos no site WebMD (“Simulação detalhada da migração de serviços locais para 
-        a nuvem Pública”) são apenas para fins informativos.
-        O Conteúdo não se destina a ser um substituto para aconselhamento médico profissional,
-        diagnóstico ou tratamento”.</h5>
-        <ul class="geral">
-          <li class="footer_active"><h6 href="https://www.gov.br/mdh/pt-br/acesso-a-informacao/politica-de-privacidade">
-            Politica de privacidade</h6></li>
-          <li class="footer_active"><h6 href="https://modeloinicial.com.br/peticao/11006969/contrato-prestacao-servicos">
-            Termos de serviços</h6></li>
-        </ul>
+      <h5>
+        “The content of this website, such as text, graphics, images and other
+        materials contained on the WebMD website (“Specific simulation of the
+        migration of local services to the Public cloud”) are for informational
+        purposes only. The Content is not intended to be an alternative to
+        professional medical advice, diagnosis or treatment”.
+      </h5>
+      <ul class="geral">
+        <li class="footer_active">
+          <h6
+            href="https://www.gov.br/mdh/pt-br/acesso-a-informacao/politica-de-privacidade"
+          >
+            Privacy Policy
+          </h6>
+        </li>
+        <li class="footer_active">
+          <h6
+            href="https://modeloinicial.com.br/peticao/11006969/contrato-prestacao-servicos"
+          >
+            Terms of services
+          </h6>
+        </li>
+      </ul>
     </footer>
     <button
       type="button"
